--- a/src/Components/Todo/Todo.scss
+++ b/src/Components/Todo/Todo.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px solid hsla(0,0%,100%,.1); 
     display: flex;
     align-items: center;
-    transition: 0.3s;
+    transition: $transition-time;
 
     .priority{
         height: 22px;
